--- a/xmp-core/src/main/java/org/verapdf/xmp/options/package.html
+++ b/xmp-core/src/main/java/org/verapdf/xmp/options/package.html
@@ -7,7 +7,7 @@
 
 <body>
 	<p>Package containing the option classes.</p>
-	<p>These are used to configure diverse function calls of xmpcore:<p>
+	<p>These are used to configure diverse function calls of xmpcore:</p>
 	<ul>
 		<li>PropertyOptions - these are used to create properties and also to retrieve information about simple, array or struct properties, as well as qualifiers
 		<li>ParseOptions - used to configure the parsing of xmp metadata packets
