--- a/xmp-core/src/main/java/org/verapdf/xmp/properties/package.html
+++ b/xmp-core/src/main/java/org/verapdf/xmp/properties/package.html
@@ -8,6 +8,6 @@
 <body>
 	<p>Package containing the property information classes.</p>
 	<p>XMPProperty and XMPPropertyInfo are used to report properties when they are retrieved by get-methods or by the iterator. 
-	   XMPAliasInfo informs about a certain property-to-property alias.<p>
+	   XMPAliasInfo informs about a certain property-to-property alias.</p>
 </body>
 </html>
