--- a/xmp-core/src/main/java/org/verapdf/xmp/impl/xpath/package.html
+++ b/xmp-core/src/main/java/org/verapdf/xmp/impl/xpath/package.html
@@ -7,6 +7,6 @@
 
 <body>
 	<p>Package containing the XMPPath handling.</p>
-	<p>An XMPPath a simplified form of an XPath, used only to create or retrieve properties in an XMPMeta object.<p>
+	<p>An XMPPath a simplified form of an XPath, used only to create or retrieve properties in an XMPMeta object.</p>
 </body>
 </html>
